--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ header {
 }
 
 .navbar-list-item{
-    color: #030b07;
+    color: red;
 	font-size: 16px;
 	text-decoration: none;
     font-family: regular;
